--- a/paper/incl_intro.tex
+++ b/paper/incl_intro.tex
@@ -133,7 +133,7 @@ To discuss this scenario we distinguish two settings, namely i) that in which da
 % The rest of the paper is organized as follows. In Sections \ref{sec:rigid} and \ref{sec:non-rigid}, we present one-dimensional phase-field fracture models with both rigid and non-rigid elastic foundations, focusing on the analysis  of linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we investigate the nonlinear regime and discuss the selection of equilibrium branches using various numerical optimization algorithms. In the final Section  summarize our results.
 
 
-The rest of the paper is organized as follows. In Section \ref{sec:rigid}, we present one-dimensional phase-field fracture models with both rigid and compliant elastic foundations. In Section \ref{sec:stab} we focus on the analysis  of linear and non-linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we construct the equilibrium map in the reversible setup, discuss the selection of equilibrium branches using various numerical optimization algorithms, and explore how irreversibility affects the stability of solutions. In the final Section \ref{sec:discussion}  we summarize our results.
+The rest of the paper is organized as follows. In Section \ref{sec:rigid}, we present one-dimensional phase-field fracture models with both rigid and compliant elastic foundations. In Section \ref{sec:stability} we focus on the analysis  of linear and non-linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we construct the equilibrium map in the reversible setup, discuss the selection of equilibrium branches using various numerical optimization algorithms, and explore how irreversibility affects the stability of solutions. In the final Section \ref{sec:discussion}  we summarize our results.
 
 
 \paragraph{Notation.} We employ standard notation for scalar Sobolev spaces defined on the unit interval, such as $H^1(0, 1)$, derivtives of one-dimensional fields, and matrix indices. Subscripted $t$ means $t$-parametrised quantities, superscripted $(k)$ means $k$-th iterate of an iterative algorithm. 
