--- a/paper/incl_intro.tex
+++ b/paper/incl_intro.tex
@@ -97,15 +97,11 @@ Bifurcation and stability of equilibrium configurations in dynamic systems witho
 For systems of ODEs the criterion  of bifurcation (from a fundamental solution) amounts to the study of the existence of solutions different than the fundamental one in an arbitrary neighborhood of the control parameters. Conditions of failure of the implicit function theorem~\cite{Iooss2012-el} describe the scenario under which a system of equations can realise more than one smooth solution.
 Less clear is the picture in presence of nonconvexities and nonlinear constraints associated with internal variables, where quasi-static evolutionary problems defined by optimality conditions take the form of variational inequalities defining the trajectories of a system in phase space. In these scenarios, as noted in the seminal work~\cite{Hill1958-xd}, the study of bifurcation and stability is not equivalent to the existence of solutions infinitesimally near critical points in arbitrary neighborhoods of the control parameters~\cite{Bazant2010-zb}.
 
-In our context, 
-% instead of seeking existence of solutions  (which amounts to the invertibility of equilibrium system), 
-a bifurcation condition along the system's evolution parametrized by the control parameter(s) is associated to the uniqueness of a field of vectors tangent to the trajectory in phase space.
+In our context, a bifurcation condition along the system's evolution parametrized by the control parameter(s) is associated to the uniqueness of a field of vectors tangent to the trajectory in phase space.
 % Namely, the critical point is degenerate in that its second derivative is not invertible.
 % (local) failure of the implicit function theorem.
 % For an evolution, 
 Brittle thin film system show pattern formation and complex branch transitions. In this work, we aim at characterising the stability (or observability) of static solutions (at a given control parameter) as well as to describe the evolutionary paths stemming from an initial condition. Conditions for uniqueness of the evolution path (or its non-bifurcation) reduce to the uniqueness of solutions to a boundary value problem defined for the \emph{rates of evolution}, or equivalently, the positive definiteness of its bilinear operator in a vector space.
-% bifurcation points are the critical loadings at which there is a multiplicity of solutions to the rate problem 
-% ----------
 
 Stability is a conceptually different notion when constraints play a role.
 The loss of such a property for a stationary points of an energy functional is of paramount importance in materials science and engineering. Illustrative in this sense are Euler buckling~\cite{Bettiol2020-ey}, wrinkling in thin films~\cite{Hutchinson2013-jk}, homogeneous nucleation of dislocations in a crystal~\cite{Carpio2005-bv,Plans2007-cx,Baggio2019-rs,Mayer2022-km,Baggio2023-qu}, buckling of lattice structures~\cite{Combescure2016-dy,Bertoldi2008-au}, nucleation of cracks in soft solids or in pantographic structures \cite{Riccobelli2023-fc,Salman2021-mn}, plastic  avalanches in crystals or amorphous materials \cite{Zhang2020-ax,Weiss2021-db,Yang2020-zm}.
@@ -130,9 +126,6 @@ We propose a remedy to this situation which involves utilizing information from 
 % \added[id=ALB]{OPEN SYSTEMS, BIOLOGICAL APPLICATION, HEALING, REVERSIBLE DAMAGE} 
 To discuss this scenario we distinguish two settings, namely i) that in which damage is reversible and all small perturbations are admissible, and ii) the case where damage is subject to an irreversibility constraint which forbids healing. In the former scenario  negative variations of damage are allowed and indeed may occur - if convenient from an energetic viewpoint. In the second setting, instead, we consider damage as a unilateral irreversible process stemming from an irreducible one-directional pointwise growth constraint.
 {We emphasize that we consider the reversible case as a prototypical study, rather than for its general physical relevance. Not only because it allows us to construct an \emph{equilibrium map}, but also because it allows to highlight on physical grounds the mathematical differences between the reversible and irreversible cases. The study of the reversible setup may still be relevant in certain phase-field damage models where irreversibility is imposed only on crack sets that exceed a \emph{given} damage threshold, referred to as relaxed crack-set irreversibility \cite{Bourdin2000-pc, Kumar2020-xz, De-Lorenzis2020-rz}, or  in models with softening elastic energy without irreversibility constraint \cite{Truskinovsky2010-st,Salman2019-kp,Salman2021-mn,Baggio2023-yo}.}
-
-
-% The rest of the paper is organized as follows. In Sections \ref{sec:rigid} and \ref{sec:non-rigid}, we present one-dimensional phase-field fracture models with both rigid and non-rigid elastic foundations, focusing on the analysis  of linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we investigate the nonlinear regime and discuss the selection of equilibrium branches using various numerical optimization algorithms. In the final Section  summarize our results.
 
 
 The rest of the paper is organized as follows. In Section \ref{sec:rigid}, we present one-dimensional phase-field fracture models with both rigid and compliant elastic foundations. In Section \ref{sec:stability} we focus on the analysis  of linear and non-linear stability regarding trivial solutions. In Section \ref{sec:numerics}, we construct the equilibrium map in the reversible setup, discuss the selection of equilibrium branches using various numerical optimization algorithms, and explore how irreversibility affects the stability of solutions. In the final Section \ref{sec:discussion}  we summarize our results.
