--- a/paper/incl_numerics.tex
+++ b/paper/incl_numerics.tex
@@ -245,7 +245,7 @@ Despite the quasi-Newton algorithm was able to reproduce one of the possible pat
 
 
 
-The system's response under the hybrid algorithm is depicted in Fig. \ref{fig:kick}(d-g)\comment[id={OUS}]{label}. The first column displays the perturbed damage profiles, while the second column shows the outcomes of the energy minimization process starting from  this perturbed state. A stable state with two nucleated boundary cracks (branch \( n=2 \)) is achieved following the destabilization of the trivial branch, as illustrated in Fig. \ref{fig:kick}(d). Subsequently, an interior crack nucleates in the middle of the system (branch \( n=4 \)), as shown in Fig. \ref{fig:kick}(e). The third event involves a transition from branch \( n=3 \) to branch \( n=5 \). The  event depicted in Fig. \ref{fig:kick}(f) is the transition to branch \( n=6 \). The last event before reconnecting to the trivial branch is the transition from branch \( n=6 \) to branch \( n=7 \), the only  branch available to the system at this load, see in Fig. \ref{fig:kick}(f). To summarize, the branches selected by the hybrid algorithm follow the sequence 
+The system's response under the hybrid algorithm is depicted in Fig. \ref{fig:kick}(d-g). The first column displays the perturbed damage profiles, while the second column shows the outcomes of the energy minimization process starting from  this perturbed state. A stable state with two nucleated boundary cracks (branch \( n=2 \)) is achieved following the destabilization of the trivial branch, as illustrated in Fig. \ref{fig:kick}(d). Subsequently, an interior crack nucleates in the middle of the system (branch \( n=4 \)), as shown in Fig. \ref{fig:kick}(e). The third event involves a transition from branch \( n=3 \) to branch \( n=5 \). The  event depicted in Fig. \ref{fig:kick}(f) is the transition to branch \( n=6 \). The last event before reconnecting to the trivial branch is the transition from branch \( n=6 \) to branch \( n=7 \), the only  branch available to the system at this load, see in Fig. \ref{fig:kick}(f). To summarize, the branches selected by the hybrid algorithm follow the sequence 
 \( 0 \rightarrow 2 \rightarrow 3 \rightarrow 5 \rightarrow 6 \rightarrow 7 \rightarrow 0 \), 
 which differs from the sequence 
 \( 0 \rightarrow 2 \rightarrow 3 \rightarrow 4 \rightarrow 6 \rightarrow 7 \rightarrow 0 \) 
